testing in progress - 04 MAR

--- a/changelog.html
+++ b/changelog.html
@@ -19,7 +19,7 @@
     <title> Logarr | Releases </title>
 
     <script src="assets/js/jquery.min.js"></script>
-    <!-- <script src="assets/js/jquery.blockUI.js" async></script> -->
+    <script src="assets/js/vendor/sweetalert2.min.js"></script>
     <script src="assets/js/logarr.main.js" async></script>
 
     <script>
@@ -64,31 +64,31 @@
 
 </head>
 
-<body onload="checkGithub()" style="background-color: #3d3d3d;">
+    <body onload="checkGithub()" style="background-color: #3d3d3d;">
 
-    <div id="releaseWrapper">
+        <div id="releaseWrapper">
 
-        <h4 class="releaseHeader">
-            <a class="releaselink" href="https://github.com/Monitorr/Logarr/releases" target="_blank"
-            title="Logarr Releases">
-                Logarr Release Log:
-            </a>
-        </h4>
+            <h4 class="releaseHeader">
+                <a class="releaselink" href="https://github.com/Monitorr/Logarr/releases" target="_blank"
+                title="Logarr Releases">
+                    Logarr Release Log:
+                </a>
+            </h4>
 
-        <div id="about">
-            <ul id="versionHistory"></ul>
+            <div id="about">
+                <ul id="versionHistory"></ul>
+            </div>
+
         </div>
 
-    </div>
-
-    <div id="footer">
-        <div id="logarrid">
-            <a href="https://github.com/monitorr/logarr" title="Logarr GitHub repo" target="_blank" class="footer">Logarr
-            </a> |
-            <a href="https://github.com/Monitorr/logarr/releases" title="Logarr releases" target="_blank" class="footer"> Releases </a>
-            <br>
+        <div id="footer">
+            <div id="logarrid">
+                <a href="https://github.com/monitorr/logarr" title="Logarr GitHub repo" target="_blank" class="footer">Logarr
+                </a> |
+                <a href="https://github.com/Monitorr/logarr/releases" title="Logarr releases" target="_blank" class="footer"> Releases </a>
+                <br>
+            </div>
         </div>
-    </div>
 
-</body>
+    </body>
 </html>
