testing in progress - 07 MAR

--- a/changelog.html
+++ b/changelog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -91,4 +92,5 @@
         </div>
 
     </body>
+
 </html>
