testing in progress -  12 MAR

--- a/changelog.html
+++ b/changelog.html
@@ -27,7 +27,7 @@
     <title> Logarr | Releases </title>
 
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/vendor/sweetalert2.min.js"></script>
+    <script src="assets/js/vendor/sweetalert2.min.js" async></script>
     <script src="assets/js/logarr.main.js" async></script>
 
     <script>
